force-app/main/default/objects/Communication_Stream__c/Communication_Stream__c.object-meta.xml
<CustomObject>
    <description>Created for US# 291,292,293,294</description>
    <label>Communication Stream</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Communication Stream Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Streams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>