force-app/main/default/objects/Communication_Stream__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that is related to the Communication Stream Note</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communication Streams</relationshipLabel>
    <relationshipName>CommunicationStreams</relationshipName>
    <type>Lookup</type>
</CustomField>