force-app/main/default/objects/Communication_Stream__c/fields/ArchiveQuoteId__c.field-meta.xml
<CustomField>
    <fullName>ArchiveQuoteId__c</fullName>
    <description>Stores Quote_ID__c reference Id which is used for Archiving Activity</description>
    <label>Archive Quote ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>