force-app/main/default/objects/Communication_Stream__c/fields/ArchiveSpaRequest__c.field-meta.xml
<CustomField>
    <fullName>ArchiveSpaRequest__c</fullName>
    <description>Stores SPA_Request__c reference Id which is used for Archiving Activity</description>
    <label>Archive SPA Request</label>
    <length>18</length>
    <type>Text</type>
</CustomField>