force-app/main/default/objects/Communication_Stream__c/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName>
    <label>Audience Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approver to Approver</fullName>
            </value>
            <value>
                <fullName>Approver/Submitter</fullName>
                <label>Distributor - Approver/Submitter</label>
            </value>
            <value>
                <fullName>SE - Approval/Submitter</fullName>
                <label>SE - Approver/Submitter</label>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>