force-app/main/default/objects/Communication_Stream__c/fields/Commented_By__c.field-meta.xml
<CustomField>
    <fullName>Commented_By__c</fullName>
    <description>Contain the name of user who commented on communication stream. US#-CPQPDAQ-4</description>
    <label>Commented By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>