force-app/main/default/objects/Communication_Stream__c/fields/Note_RichText__c.field-meta.xml
<CustomField>
    <fullName>Note_RichText__c</fullName>
    <label>Note RichText</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>