force-app/main/default/objects/Communication_Stream__c/fields/NoteRequestedBy__c.field-meta.xml
<CustomField>
    <fullName>NoteRequestedBy__c</fullName>
    <description>Used to name external distributor, case #, cr, etc.</description>
    <label>Note Requested By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>