force-app/main/default/objects/Communication_Stream__c/fields/NoteType__c.field-meta.xml
<CustomField>
    <fullName>NoteType__c</fullName>
    <description>project-related note, more visibility and accountability for project managers</description>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PM Note</fullName>
            </value>
            <value>
                <fullName>Aged Note</fullName>
            </value>
            <value>
                <fullName>Drawing Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>