force-app/main/default/objects/Communication_Stream__c/fields/ProjectID__c.field-meta.xml
<CustomField>
    <fullName>ProjectID__c</fullName>
    <description>Project  IDrelated to note</description>
    <label>ProjectID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>