force-app/main/default/objects/Communication_Stream__c/fields/Quotation_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Specialist__c</fullName>
    <formula>IF(AND($Profile.Name = &apos;Quotation Specialist&apos;,
       ISPICKVAL(Audience_Type__c , &apos;Approver to Approver&apos;)), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quotation Specialist</label>
    <type>Checkbox</type>
</CustomField>