force-app/main/default/objects/Communication_Stream__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Communication Streams</relationshipLabel>
    <relationshipName>Communication_Streams</relationshipName>
    <type>Lookup</type>
</CustomField>