force-app/main/default/objects/Communication_Stream__c/fields/QuoteID__c.field-meta.xml
<CustomField>
    <fullName>QuoteID__c</fullName>
    <label>QuoteID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>