force-app/main/default/objects/Communication_Stream__c/fields/S4VistexAgreement__c.field-meta.xml
<CustomField>
    <fullName>S4VistexAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>S4 Agreement Related to the Communication Stream Note</description>
    <label>S4VistexAgreement</label>
    <referenceTo>SapVistexAgreement__c</referenceTo>
    <relationshipLabel>Communication Streams</relationshipLabel>
    <relationshipName>CommunicationStreams</relationshipName>
    <type>Lookup</type>
</CustomField>