force-app/main/default/objects/Communication_Stream__c/fields/SPA_Request__c.field-meta.xml
<CustomField>
    <fullName>SPA_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPA Request</label>
    <referenceTo>SPA_Request__c</referenceTo>
    <relationshipLabel>Communication Streams</relationshipLabel>
    <relationshipName>Communication_Streams</relationshipName>
    <type>Lookup</type>
</CustomField>