force-app/main/default/objects/Communication_Stream__c/fields/SPD_Rev_Level__c.field-meta.xml
<CustomField>
    <fullName>SPD_Rev_Level__c</fullName>
    <label>SPD Rev Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>