force-app/main/default/objects/Communication_Stream__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL to the attachment related to the Communication Stream Note</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>