force-app/main/default/objects/Communication_Stream__c/recordTypes/Except_Plant_Price_Authorization_Rec_Type.recordType-meta.xml
<RecordType>
    <fullName>Except_Plant_Price_Authorization_Rec_Type</fullName>
    <active>true</active>
    <label>Except Plant/Price Authorization Rec Type</label>
</RecordType>