force-app/main/default/objects/Communication_Stream__c/recordTypes/Price_and_Plant_Authorizers.recordType-meta.xml
<RecordType>
    <fullName>Price_and_Plant_Authorizers</fullName>
    <active>true</active>
    <label>Price and Plant Authorizers</label>
</RecordType>