force-app/main/default/objects/Communication_Stream__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Audience_Type__c</columns>
    <columns>Note__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>QuoteID__c</columns>
    <columns>SPD_Rev_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>